--- a/templates/views/section_about-us.html
+++ b/templates/views/section_about-us.html
@@ -8,7 +8,7 @@
         
     <!-- Company Info -->
     <div class="max-w-full text-center md:text-left md:max-w-md -mt-5 md:mt-5">
-        <h2 class="text-lg font-extrabold uppercase text-indigo-800 lg:text-3xl pb-4">Who, What, Where, When, and Why is ByteMagus</h2>
+        <h2 class="text-lg font-extrabold uppercase lg:text-3xl pb-4" style="color: #1D0874;">Who, What, Where, When, and Why is ByteMagus</h2>
         <p class="text-sm lg:text-base leading-6 lg:leading-7 text-gray-700">
             BYTEMAGUS CO. is a tech company founded by Julette Anthony C. Peque and Romnick R. Canonigo, focused on advancing technological modernization in the Philippines. Originally a passion project, the company specializes in web systems development, computer system support and management, and network support. The name "BYTEMAGUS" represents their innovative and playful approach, symbolizing a "computer wizard" dedicated to technological progress.
         </p>
@@ -27,7 +27,7 @@
         <div class="grid gap-8 text-gray-700 w-full max-w-4xl">
             <!-- Vision -->
             <div class="bg-white p-6  hover:shadow-lg transform hover:-translate-y-1 transition-transform duration-300 -mt-7 md:mt-0">
-                <h2 class="text-lg font-extrabold uppercase text-indigo-800 lg:text-2xl pb-4 text-left">Our Vision</h2>
+                <h2 class="text-lg font-extrabold uppercase lg:text-2xl pb-4 text-left" style="color: #1D0874;">Our Vision</h2>
                 <p class="text-sm lg:text-base leading-6 lg:leading-7 text-left">
                     To become a leading force in the technological modernization of the Philippines by 2030, known for our expertise, innovation, and commitment to excellence. We envision a future where BYTEMAGUS CO. plays a pivotal role in shaping a digitally advanced nation, bridging the gap between technology and its practical applications for every Filipino.
                 </p>
@@ -35,7 +35,7 @@
             
             <!-- Mission -->
             <div class="bg-white p-6  hover:shadow-lg transform hover:-translate-y-1 transition-transform duration-300 mb-8 -mt-10 md:mt-0">
-                <h2 class="text-lg font-extrabold uppercase text-indigo-800 lg:text-2xl pb-4 text-left">Our Mission</h2>
+                <h2 class="text-lg font-extrabold uppercase lg:text-2xl pb-4 text-left" style="color: #1D0874;">Our Mission</h2>
                 <p class="text-sm lg:text-base leading-6 lg:leading-7 text-left">
                     To deliver cutting-edge technological solutions that empower businesses and individuals in the Philippines. We aim to provide exceptional services in web systems development, computer support, and network management, fostering innovation and driving digital transformation across the country.
                 </p>
