--- a/templates/views/section_services-offered.html
+++ b/templates/views/section_services-offered.html
@@ -1,7 +1,7 @@
 <section id="services" class="my-8 flex flex-col items-center p-8 xl:px-24 ">
 
     <!-- Title that will change dynamically -->
-    <h2 id="carousel-title" class="text-xl sm:text-2xl lg:text-3xl font-extrabold mb-5 text-center text-indigo-800 md:max-w-md mt-9 md:mt-10 ">
+    <h2 id="carousel-title" class="text-xl sm:text-2xl lg:text-3xl font-extrabold mb-5 text-center md:max-w-md mt-9 md:mt-10" style="color: #1D0874;">
         Web Systems Development and Designing
     </h2>
     
