--- a/templates/views/section_contact-us.html
+++ b/templates/views/section_contact-us.html
@@ -1,7 +1,7 @@
 <section class="p-4" id="contact" style="z-index: 0 ;" >
     <div class="flex items-center justify-center mb-20 mt-10 md:mt-20">
         <form action="" method="" id="contact-form" class="flex flex-col gap-4 w-full md:w-3/4 lg:w-1/2 main-form bg-white shadow-lg p-6 rounded-lg">
-            <h1 class="font-bold text-2xl md:text-4xl lg:text-3xl text-center text-indigo-800 mb-4">Contact Us!</h1>
+            <h1 class="font-bold text-2xl md:text-4xl lg:text-3xl text-center mb-4" style="color: #1D0874;">Contact Us!</h1>
             
             <div class="flex flex-col gap-2">
                 <label for="sender_email" class="text-lg md:text-xl lg:text-2xl font-semibold">*Email:</label>
